# znyx-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TELEMETRY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  audit.yml  ci.yml  publish.yml  security.yml
csharp/: Models.cs  README.md  Telemetry.cs  Znyx.Sdk.csproj  ZnyxClient.cs
go/: client.go  go.mod  models.go
java/: README.md  pom.xml
java/src/main/java/ai/znyx/sdk/: Telemetry.java  ZnyxClient.java  ZnyxException.java
java/src/main/java/ai/znyx/sdk/models/: Decision.java  DetectorResult.java  EvaluationRequest.java  EvaluationResponse.java  RuleHit.java  ToolEvaluationRequest.java
npm-runtime/: README.md  package.json
npm-runtime/scripts/: postinstall.js
python/: README.md  pyproject.toml
python/znyx_sdk/: __init__.py  _telemetry.py  client.py  exceptions.py  models.py  sync_client.py
ruby/: Gemfile  README.md  znyx-sdk.gemspec
ruby/lib/: znyx_sdk.rb
ruby/lib/znyx_sdk/: client.rb  models.rb  telemetry.rb
rust/: Cargo.toml  README.md
rust/src/: lib.rs  models.rs  telemetry.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  telemetry.ts
