[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "znyx-sdk"
version = "1.1.2"
description = "Python SDK for the ZNYX Runtime API — enterprise-grade AI guardrails for production LLM applications"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "ai-guardrails", "llm-safety", "prompt-injection", "jailbreak-detection",
    "pii-detection", "guardrails", "llm", "ai-safety",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://znyx.ai"
Documentation = "https://znyx.ai/documentation"
Source = "https://github.com/GuideLite/guardrails"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
