[package]
name = "znyx-sdk"
version = "1.0.1"
edition = "2021"
description = "Official Rust SDK for the ZNYX Runtime guardrails API"
license = "Apache-2.0"
homepage = "https://znyx.ai"
repository = "https://github.com/zitrino-oss/znyx-sdk"
keywords = ["znyx", "guardrails", "llm", "ai", "safety"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
